# netgen-rs

./: .gitignore  Cargo.toml  README.md  clean.sh  mine.sh  mine.yml  rename.sh  run.sh  topology.yml
assets/: config.yaml  config.yml  rt1.conf  rt2.conf  rt3.conf  sample-top.yml  sample-topo.yml
scripts/: clean.sh  down.sh
src/: devices.rs  error.rs  lib.rs  link.rs  main.rs  node.rs  parser.rs  topology.rs
src/plugins/: frr.rs  holo.rs  mod.rs
