[package]
name = "netgen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
yaml-rust2 = "0.9.0"
nix = { version = "0.29.0", features = ["sched", "net"] }
rtnetlink = { version="0.14.1", path="../rtnetlink", features = ["tokio_socket", "smol_socket"]}
netlink-packet-route = "0.19"
tokio = { version = "1.41.1", features = ["full"] }
libc = "0.2.164"
enum-as-inner = "0.6.1"
