[package]
name = "netgen"
version = "0.1.0"
edition = "2024"
authors = ["Paul Wekesa <paul1tw1@gmail.com>"]
repository = "https://github.com/Paul-weqe/netgen-rs"
license = "MIT"
keywords = ["network-testing", "namespace", "network", "automation"]

[dependencies]
yaml-rust2 = "0.9.0"
nix = { version = "0.29.0", features = [ "mount", "net", "sched", "signal"] }
rtnetlink = { version = "0.17.0", features = ["tokio_socket", "smol_socket"] }
netlink-packet-route = "0.24"
tokio = { version = "1.43.1", features = ["full"] }
libc = "0.2.164"
enum-as-inner = "0.6.1"
ipnetwork = "0.20.0"
rand = "0.8.5"
clap = {version="4.5.23", features = ["default", "cargo"]}
futures-util = "0.3.31"
sysinfo = "0.33.1"
